--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
     <body>
         <div>
              {{>header}}
-             <p>This site was created by Daniel Ashik. It uses data from openweather.com</p>
+             <p>This site was created by Daniel Ashik. It uses data from openweatherApp.com</p>
             <img class="portrait" src="/img/about.webp">
         </div>
        
